corpus/kernel/6.8/sound/index.md
---
collection: kernel
version: "6.8"
title: "Sound Subsystem Documentation"
source_url: https://www.kernel.org/doc/html/v6.8/sound/index.html
fetched_at: 2026-08-21T03:32:53+00:00
---
English

- [Chinese (Simplified)](../translations/zh_CN/sound/index.md)

# Sound Subsystem Documentation

- [ALSA Kernel API Documentation](kernel-api/index.md)
  - [The ALSA Driver API](kernel-api/alsa-driver-api.md)
  - [Writing an ALSA Driver](kernel-api/writing-an-alsa-driver.md)
- [Designs and Implementations](designs/index.md)
  - [Standard ALSA Control Names](designs/control-names.md)
  - [ALSA PCM channel-mapping API](designs/channel-mapping-api.md)
  - [ALSA Compress-Offload API](designs/compress-offload.md)
  - [ALSA PCM Timestamping](designs/timestamping.md)
  - [ALSA Jack Controls](designs/jack-controls.md)
  - [Tracepoints in ALSA](designs/tracepoints.md)
  - [Proc Files of ALSA Drivers](designs/procfile.md)
  - [Notes on Power-Saving Mode](designs/powersave.md)
  - [Notes on Kernel OSS-Emulation](designs/oss-emulation.md)
  - [OSS Sequencer Emulation on ALSA](designs/seq-oss.md)
  - [ALSA Jack Software Injection](designs/jack-injection.md)
  - [MIDI 2.0 on Linux](designs/midi-2.0.md)
- [ALSA SoC Layer](soc/index.md)
  - [ALSA SoC Layer Overview](soc/overview.md)
  - [ASoC Codec Class Driver](soc/codec.md)
  - [ASoC Digital Audio Interface (DAI)](soc/dai.md)
  - [Dynamic Audio Power Management for Portable Devices](soc/dapm.md)
  - [ASoC Platform Driver](soc/platform.md)
  - [ASoC Machine Driver](soc/machine.md)
  - [Audio Pops and Clicks](soc/pops-clicks.md)
  - [Audio Clocking](soc/clocking.md)
  - [ASoC jack detection](soc/jack.md)
  - [Dynamic PCM](soc/dpcm.md)
  - [Creating codec to codec dai link for ALSA dapm](soc/codec-to-codec.md)
- [Advanced Linux Sound Architecture - Driver Configuration guide](alsa-configuration.md)
  - [Kernel Configuration](alsa-configuration.md#kernel-configuration)
  - [Module parameters](alsa-configuration.md#module-parameters)
  - [AC97 Quirk Option](alsa-configuration.md#ac97-quirk-option)
  - [Configuring Non-ISAPNP Cards](alsa-configuration.md#configuring-non-isapnp-cards)
  - [Module Autoloading Support](alsa-configuration.md#module-autoloading-support)
  - [ALSA PCM devices to OSS devices mapping](alsa-configuration.md#alsa-pcm-devices-to-oss-devices-mapping)
  - [Proc interfaces (/proc/asound)](alsa-configuration.md#proc-interfaces-proc-asound)
  - [Early Buffer Allocation](alsa-configuration.md#early-buffer-allocation)
  - [Links and Addresses](alsa-configuration.md#links-and-addresses)
- [HD-Audio](hd-audio/index.md)
  - [More Notes on HD-Audio Driver](hd-audio/notes.md)
  - [HD-Audio Codec-Specific Models](hd-audio/models.md)
  - [HD-Audio Codec-Specific Mixer Controls](hd-audio/controls.md)
  - [HD-Audio DP-MST Support](hd-audio/dp-mst.md)
  - [Realtek PC Beep Hidden Register](hd-audio/realtek-pc-beep.md)
  - [HDAudio multi-link extensions on Intel platforms](hd-audio/intel-multi-link.md)
- [Card-Specific Information](cards/index.md)
  - [Analog Joystick Support on ALSA Drivers](cards/joystick.md)
  - [Brief Notes on C-Media 8338/8738/8768/8770 Driver](cards/cmipci.md)
  - [Sound Blaster Live mixer / default DSP code](cards/sb-live-mixer.md)
  - [Sound Blaster Audigy mixer / default DSP code](cards/audigy-mixer.md)
  - [E-MU Digital Audio System mixer / default DSP code](cards/emu-mixer.md)
  - [Low latency, multichannel audio with JACK and the emu10k1/emu10k2](cards/emu10k1-jack.md)
  - [VIA82xx mixer](cards/via82xx-mixer.md)
  - [Guide to using M-Audio Audiophile USB with ALSA and Jack](cards/audiophile-usb.md)
  - [Alsa driver for Digigram miXart8 and miXart8AES/EBU soundcards](cards/mixart.md)
  - [ALSA BT87x Driver](cards/bt87x.md)
  - [Notes on Maya44 USB Audio Support](cards/maya44.md)
  - [Software Interface ALSA-DSP MADI Driver](cards/hdspm.md)
  - [Serial UART 16450/16550 MIDI driver](cards/serial-u16550.md)
  - [Imagination Technologies SPDIF Input Controllers](cards/img-spdif-in.md)
  - [The Virtual PCM Test Driver](cards/pcmtest.md)
